--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,39 @@
-*.iml
-.gradle
-/local.properties
-/.idea/caches
-/.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
-/.idea/navEditor.xml
-/.idea/assetWizardSettings.xml
+# built application files
+*.apk
+*.ap_
+
+# files for the dex VM
+*.dex
+
+# Java class files
+*.class
+
+# generated files
+bin/
+gen/
+R.java
+
+!proguard/mapping.txt
+proguard/
+# Local configuration file (sdk path, etc)
+local.properties
+
+# Eclipse project files
+.classpath
+.project
+.settings
+.metadata
 .DS_Store
-/build
-/captures
-.externalNativeBuild
-.cxx
+*~
+logs/*
+res/values/com_crashlytics_export_strings.xml
+.idea/
+**/.idea/
+**/build/
+*.iml
+**/*.iml
+.gradle
+.gradle/*.*
+gradle/
+spoon-output/
+/.idea/
